--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,7 @@
-MAIL_HOST = 'localhost'
-MAIL_PORT = 1234
-MAIL_SECURITY = 'khnsjkdhksjhsk'
+
+# Mail
+MAIL_HOST = 'sandbox.smtp.mailtrap.io'
+MAIL_PORT = 2525
+MAIL_USER = 'dafc38b01b0bc6'
+MAIL_PASS = '1a85ec0166a11f'
+MAIL_FROM = 'saymonmcedo00@gmail.com'
