--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/nodemailer": "^6.4.16",
     "tsx": "^4.19.1",
@@ -16,6 +17,7 @@
   },
   "dependencies": {
     "celebrate": "^15.0.3",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "nodemailer": "^6.9.15",
     "youch": "^3.3.4"
